--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: sse_channel
+name: sse_handler
 description: StreamChannel wrappers for Server Sent Events.
-version: 0.0.3
+version: 0.0.1
 repository: https://github.com/prabhuc94/sse_channel
 
 environment:
